--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     flex: 1;
     flex-direction: column;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 #big-preview-container {
@@ -33,12 +33,14 @@ body {
 }
 
 #snippets-container {
-    flex: 1;
-    background-color: blue;
+    /* flex: 1; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    overflow: hidden;
+    justify-content: space-between;
+    overflow-y: auto; /* Set to 'auto' or 'hidden' to make content inside scrollable */
+    height: calc(100% - 25vh); /* Take the remaining height */
+    max-height: 75vh;
+    background-color: #424599;
 }
 
 .snippet-block {
@@ -53,12 +55,34 @@ body {
 }
 
 .snippet-code {
-    flex: 1;
+    height: 75%;
     background-color: gray;
-    overflow-y: auto; /* Allows scrolling if content overflows */
+    overflow-y: auto;
+}
+
+.snippet-code > p {
+    padding: 16px; 
 }
 
 .snippet-name {
-    flex: 1;
+    height: 25%;
 }
 
+::-webkit-scrollbar {
+    background-color: transparent !important;
+    width: 16px !important;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+    border-radius: 16px;
+    border: 4px solid  var(--main-color);
+}
+
+::-webkit-scrollbar-button {
+    display: none !important;
+}
