--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 :root {
-    --main-color: #70edff;
+    --federal-blue: #03045E;
+    --marian-blue: #023E8A;
+    --honolulu-blue: #0077B6;
+    --blue-green: #0096C7;
+    --pacific-cyan: #00B4D8;
+    --vivid-sky-blue: #48CAE4;
+    --non-photo-blue-1: #90E0EF;
+    --non-photo-blue-2: #ADE8F4;
+    --light-cyan: #CAF0F8;
 }
 
 body {
@@ -8,6 +16,11 @@ body {
     margin: auto;
     max-width: 38rem;
     background-color: #424599 !important;
+    overflow: hidden;
+}
+
+p, h1 {
+    word-wrap: break-word;
 }
 
 #main-container {
@@ -18,8 +31,26 @@ body {
 #side-bar {
     width: 20vw;
     height: 100vh;
-    background-color: var(--main-color);
+    background-color: var(--federal-blue);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+
+.side-group-name {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 18vw;
+    margin-top: 20px;
+    overflow: hidden;
+    border: 1px solid var(--vivid-sky-blue);
+}
+
+.side-group-name > p {
+    margin: 5px;
+    white-space: nowrap;
 }
 
 #addSnippetButton {
@@ -110,7 +141,14 @@ button:hover {
 
 #big-preview-container {
     height: 25vh;
-    background-color: green;
+    background-color: var(--honolulu-blue);
+    width: 98%;
+    margin: 1% 1% 1% 1%;
+    overflow-y: hidden;
+}
+
+#big-preview-container > h1 {
+    overflow-y: auto;
 }
 
 #snippets-container {
@@ -122,11 +160,12 @@ button:hover {
     height: calc(100% - 25vh);
     max-height: 75vh;
     background-color: #424599;
+    padding-bottom: 45px;
 }
 
 .snippet-block {
     height: 250px;
-    background-color: yellow;
+    background-color: var(--vivid-sky-blue);
     box-sizing: border-box;
     overflow: hidden;
     margin: 5px 5px 5px 10px;
@@ -135,8 +174,22 @@ button:hover {
 
 .snippet-code {
     height: 75%;
-    background-color: gray;
+    background-color: var(--marian-blue);
     overflow: hidden;
+    color: white;
+    position: relative;
+}
+
+.snippet-code::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+    transform: translateY(3rem);
+    background-image: linear-gradient(transparent, rgb(2 62 139 / 85%));
 }
 
 .snippet-code>p {
@@ -167,13 +220,11 @@ button:hover {
     min-width: 120px;
     opacity: 0;
     transition: transform 0.2s ease-out, opacity 0.2s ease-out;
-    /* Add transitions */
     flex-direction: row;
 }
 
 .context-menu.show {
     transform: translateY(-100%);
-    /* Adjust the transformation to move up */
     opacity: 1;
 }
 
@@ -187,9 +238,6 @@ button:hover {
     background-color: #f0f0f0;
 }
 
-.side-group-name {
-    background-color: white;
-}
 
 ::-webkit-scrollbar {
     background-color: transparent !important;
@@ -201,9 +249,9 @@ button:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
+    background-color: var(--federal-blue);
     border-radius: 16px;
-    border: 1px solid var(--main-color);
+    border: 1px solid var(--federal-blue);
 }
 
 ::-webkit-scrollbar-button,
